package edu.hitsz.aircraft.factory;

/**
 * 敌机类型枚举
 * @author hitsz
 */
public enum EnemyType {
    MOB,        // 普通敌机
    SHOOTING,   // 射击敌机
    QUICK,      // 快速敌机
    BOSS        // Boss敌机
}